2025-02-19T01:06:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13403263109 # 570
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-19
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 213 245 / 214 246
* notice: next accum: outdated-unq outdated-all / unq all: 213 245 / 215 247
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-02-18]

2025-02-18T01:05:52Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13381146444 # 569
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-18
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 211 243 / 213 245
* notice: next accum: outdated-unq outdated-all / unq all: 213 245 / 214 246
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-03] / [2025-02-17]

2025-02-17T01:08:42Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13360746166 # 568
* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-17
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 205 236 / 213 245
* notice: next accum: outdated-unq outdated-all / unq all: 211 243 / 213 245
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-02-02] / []

2025-02-04T01:04:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13126127442 # 555