@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-02-19T01:06:09Z",
+  "timestamp" : "2025-03-02T01:12:05Z",
   "count_outdated" : 245,
   "uniques_outdated" : 213,
-  "count" : 247,
-  "uniques" : 215,
+  "count" : 248,
+  "uniques" : 216,
   "clones" : [
     {
       "timestamp": "2025-02-17T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2025-02-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-03-01T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
