@@ -1,6 +1,6 @@
 {
-  "count": 2,
-  "uniques": 2,
+  "count": 3,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2025-02-17T00:00:00Z",
@@ -9,6 +9,11 @@
     },
     {
       "timestamp": "2025-02-18T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2025-03-01T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
