@@ -1,3 +1,12 @@
+2025-03-02T01:12:05Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13610629756 # 581
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-03-02
+* notice: last 14d: unq all: 3 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 213 245 / 215 247
+* notice: next accum: outdated-unq outdated-all / unq all: 213 245 / 216 248
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-03-01]
+
 2025-02-19T01:06:09Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13403263109 # 570
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-19
